[package]
name = "toy_payment_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "lib"
path = "src/lib.rs"
