[package]
name = "toy_payment_engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
mimalloc = { version = "0.1.17", default-features = false }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "lib"
path = "src/lib.rs"
